[package]
name = "injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["libloaderapi", "consoleapi", "minwindef", "processenv", "winbase", "handleapi", "wingdi", "windef", "winuser", "winbase" ] }
